# LAMTA_examples

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Advection.ipynb  README.md  pyproject.toml
conda/: environment.yml
docs/: _config.yml  _toc.yml  conf.py  index.md  intro.md  notebooks.md  requirements.txt
lamta_examples/: data_fetch.py
notebooks/: Advection.ipynb  Analytical_examples.ipynb  Eulerian.ipynb  Lagrangian.ipynb  Ocean_examples.ipynb  ParticleSet.ipynb  _config.yml  _toc.yml  conf.py  dev_env.md  gallery.yml  index.md  installation.md  notebooks_overview.md  notes.md  requirements.txt  run.md  testFields.py
